# overlay-scrollbar

./: .bzrignore  AUTHORS  HACKING  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: 81overlay-scrollbar.in  Makefile.am  Makefile.in  com.canonical.Unity.GtkModule.gschema.xml  com.canonical.desktop.interface.gschema.xml
debian/: ayatana-scrollbar.py  changelog  control  copyright  liboverlay-scrollbar-0.1-0.install  liboverlay-scrollbar-0.1-0.symbols  liboverlay-scrollbar-0.1-dev.install  liboverlay-scrollbar-0.2-0.install  liboverlay-scrollbar-0.2-dev.install  liboverlay-scrollbar3-0.2-0.install  liboverlay-scrollbar3-0.2-dev.install  overlay-scrollbar-gtk2.install  overlay-scrollbar-gtk3.install  overlay-scrollbar.install  rules  watch
debian/patches/: 01_workaround_qt_overlay_crash.patch
liboverlay-scrollbar/: Makefile.am  gtkscrolledwindow.c  overlay-pager.c  overlay-pager.h  overlay-scrollbar-cairo-support.c  overlay-scrollbar-cairo-support.h  overlay-scrollbar-support.c  overlay-scrollbar-support.h  overlay-scrollbar.c  overlay-scrollbar.h  overlay-scrollbar.pc.in  overlay-thumb.c  overlay-thumb.h
misc/: Makefile.am  Makefile.in  gtk+-2.0-maverick-use-overlay-scrollbar-from-module.patch  gtk+-2.24.1-scrolled-window-impl-loaded-from-module.patch  gtk+-3.0-right_filter_window_for_XI2_events.patch  gtk+-fix-upstream-bug-652102.patch
os/: Makefile.am  Makefile.in  em-converter.c  em-converter.h  gtkscrolledwindow.c  os-animation.c  os-bar.c  os-log.c  os-pager.c  os-private.h  os-scrollbar.c  os-scrollbar.h  os-thumb.c  os-utils.c  os-utils.h  os-version.h  os-version.h.in  os.h  overlay-pager.c  overlay-scrollbar-cairo-support.h  overlay-scrollbar-support.c  overlay-scrollbar-support.h
pkgconfig/: Makefile.am  Makefile.in  overlay-scrollbar.pc.in  overlay-scrollbar3.pc.in
tests/: Makefile.am  Makefile.in  overlay-scrollbar-test-child-composited.c  overlay-scrollbar-test-pager.c  overlay-scrollbar-test-pixmap.c  overlay-scrollbar-test-wm_state.c  overlay-scrollbar-test.c  test-os-pager.c  test-os-pixmap.c  test-os-treeview.c  test-os-wm-state.c  test-os.c  test-overlay-scrollbar-window.c
